# personal-info

./: .env.example  .gitignore  AI_README.md  AI_REPO_CONTEXT.md  README.md  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: chatbot-improvement.yml  portfolio.yml
__root__/: __init__.py
config/: README.md  workflow.active.json
content/: README.md  chatbot_faq.md  portfolio.md  resume.md
content/portfolios/: portfolio_1.md  portfolio_2.md
content/resumes/: resume_1.md
data/eval/: retrieval_eval.json
docs/: chatbot-integration.md  chatbot-service-migration.md  render-chatbot-setup.md  workflow-v2.md  workflow.md  zero-cost-chatbot-context.md
portfolio/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
portfolio/public/: resume.json
portfolio/scripts/: sync-site.mjs  validate-site-json.mjs
portfolio/src/: amaWidget.js  chatbotApi.js  chatbotConfig.js  chatbotNlp.js  main.js
resume_pdf/: README.md  build.py  build_config.json
resume_pdf/assets/: resume.css
scripts/: activate_venv.ps1  analyze_chat_logs.py  build_corpus.py  build_corpus_from_workflow.py  build_index.py  build_vector_index.py  chunk.py  eval_retrieval.py  ingest.py
src/docs_chatbot_service/: __init__.py  main.py
templates/portfolio_formats/: template_format_1.json  template_format_2.json
tests/: test_analyze_chat_logs.py  test_api_contracts.py  test_chat_log_store.py  test_eval_retrieval.py  test_query_nlp.py
tools/: __init__.py  __main__.py  cli.py  registry.py  workflow_v2.py
(+48 files in other folders)
